# qc-data-entry

./: .gitignore  Cargo.toml  config_qc_data_entry.toml  pre-commit.sh  run_tests.sh  rustfmt.toml
.gram/: debug.jsonc  tasks.jsonc
log-result/: Cargo.toml
log-result/src/: lib.rs
qc-data-entry/: Cargo.toml
qc-data-entry-derive/: Cargo.toml
qc-data-entry-derive/src/: lib.rs
qc-data-entry-gui/: Cargo.toml  README.md  build.rs  qc_data_entry.rc
qc-data-entry-gui/src/: clock.rs  constants.rs  convert.rs  errors.rs  formats.rs  fr_product_view.rs  main.rs  number_edit_fixed.rs  number_units_edit.rs  ob_product_view.rs  qc_product_view.rs  qr.rs  range.rs  wb_product_view.rs
qc-data-entry/expand-trait/: Cargo.toml
qc-data-entry/expand-trait/src/: lib.rs
qc-data-entry/src/: commands.rs  config.rs  constants.rs  errors.rs  formats.rs  lib.rs  log.rs  main.rs  range.rs  sample_info.rs  sampled_product.rs
qc-data-entry/src/db/: db.rs  lot_list.rs  mod.rs  product.rs  product_customer_line.rs  product_lot.rs  product_sample_points.rs  qc_product.rs  qc_tester_list.rs
src/: clock.rs  main.rs
