[package]


name = "qc-data-entry-derive"
version = "0.1.0"
edition = "2024"


license = "MIT"

keywords = ["gui", "ui", "windows"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "0.1.5"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"]}
quote = "1.0"
itertools = "0.14.0"
