[package]
name = "qc-data-entry-gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# [dependencies]
# nwg = {version = "^1.0.12", package = "native-windows-gui"}
# native-windows-derive = "^1.0.3"

# [patch.crates-io]
# native-windows-gui = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' }
# native-windows-derive = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' }

# [dev-dependencies]
# qc-data-entry-derive = { path = "../qc-data-entry-derive" }

# nwg = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' , package = "native-windows-gui"}
# native-windows-derive = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' }

[dependencies]
chrono = "0.4.43"
common_math = "0.3.0"
log = "0.4.29"
log-result = { path = "../log-result" }
native-windows-derive = { path = "c:/Users/QC Lab/Documents/rust/native-windows-gui/native-windows-derive" }
nwg = { package = "native-windows-gui", path = "c:/Users/QC Lab/Documents/rust/native-windows-gui/native-windows-gui", features = [
  "flexbox"
] }
qc-data-entry = { path = "../qc-data-entry" }
qc-data-entry-derive = { path = "../qc-data-entry-derive" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "^0.12.0"
toml = "0.9.11"
winapi = { version = "0.3.9", features = ["winuser"] }

[build-dependencies]
embed-resource = "1.3"
# qc-data-entry-derive = { path = "../qc-data-entry-derive" }
