[package]
name = "qc-data-entry"
version = "0.1.0"
edition = "2024"


# [dependencies]
# nwg = {version = "^1.0.12", package = "native-windows-gui"}
# native-windows-derive = "^1.0.3"

# [patch.crates-io]
# native-windows-gui = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' }
# native-windows-derive = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' }

[dependencies]
# nwg = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' , package = "native-windows-gui"}
# native-windows-derive = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' }

# time = "0.3.44"
chrono = "0.4.42"
common_math = "0.3.0"


[build-dependencies]
embed-resource = "1.3"

