[package]
name = "qc-data-entry"
version = "0.1.0"
edition = "2024"



[dependencies]
# nwg = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' , package = "native-windows-gui"}
# native-windows-derive = { git = 'https://github.com/samuel-jimenez/native-windows-gui.git' }

# time = "0.3.44"
chrono = "0.4.42"
common_math = "0.3.0"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }

